# symphony

./: .gitignore  PLAN-rust-todoist-parity.md  README.md
.codex/: config.toml
.github/: pull_request_template.md
.github/workflows/: make-all.yml  (+3 more)
docs/: linear-to-todoist-prd.md  linear-to-todoist-spec.md  todoist-rust-runtime.md
elixir/: AGENTS.md  Makefile  README.md  WORKFLOW.live.md  WORKFLOW.md  WORKFLOW.smoke.full.local.md
rust/: .env.example  .gitignore  Cargo.toml  README.md  SMOKE_TESTS.md  WORKFLOW.md  WORKFLOW.smoke.full.md  WORKFLOW.smoke.minimal.md
rust-todoist/: .env.example  .gitignore  Cargo.toml  README.md  SMOKE_TESTS.md  WORKFLOW.live.md  WORKFLOW.md  WORKFLOW.smoke.full.md  WORKFLOW.smoke.minimal.md
rust-todoist/benches/: todoist_hot_paths.rs
rust-todoist/docs/: Todoist API Rate Limits  Deep Dive.md  elixir-observability-audit.md  linear-to-todoist-spec.md  logging.md  rust-modernization-audit-2026-03.md  rust-todoist-performance-parity-audit-2026-03.md  rust-todoist-token-investigation-harness.md  smoke-tests.md  todoist-rate-limit-notes.md  todoist-rust-runtime.md
rust-todoist/scripts/: compare_runtime_logs.py  workspace_before_remove.sh
rust-todoist/src/: cli.rs  config.rs  dynamic_tool.rs  http.rs  issue.rs  logging.rs  main.rs  observability.rs  orchestrator.rs  prompt.rs  runtime_env.rs  workflow.rs  workspace.rs
rust-todoist/src/codex/: mod.rs
rust-todoist/src/tracker/: memory.rs  mod.rs  todoist.rs
rust-todoist/tests/: live_e2e.rs
scripts/: README.md  check_pr_body.py  reset_smoke_state.py  test_check_pr_body.py
(+39 files in other folders)
