[package]
name = "symphony-rust-todoist"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Todoist-backed Rust implementation of the Symphony service specification"

[[bin]]
name = "symphony-todoist"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.1", features = ["json"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
minijinja = { version = "2.8.0", features = ["builtins", "debug"] }
notify = "8.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls", "http2"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.18.0"
tower = { version = "0.5.2", features = ["util"] }
